fixing menu-hamburger alignment

--- a/control/content/css/content.app.css
+++ b/control/content/css/content.app.css
@@ -172,8 +172,7 @@ Style for carousel image dimension
 */
 
 .home.carousel-items .item{
-    padding: 10px;
-    padding: 8px 17px;
+    padding: 5px 15px;
     border-top: 1px solid #ddd;
     min-height: 50px;
 }
@@ -182,11 +181,11 @@ Style for carousel image dimension
     max-height: 40px;
 }
 .home.carousel-items .item .icon{
+    float: left;
     font-size: 24px;
     position: relative;
-    top: 8px;
     margin-right: 7px;
-    margin-top: 10px;
+    margin-top: 7px;
     cursor: pointer;
     color: #999;}
 .home.carousel-items .item .btn-delete-icon{
@@ -194,11 +193,10 @@ top: 8px;
 }
 
 .word-wrap {
-    line-height: 1.5em;
-    height: 3em;
+    line-height: 1.2em;
     top: 0 !important;
     word-wrap: break-word;
-    width: 30% !important; /* Use whatever width you want */
+    width: 40% !important; /* Use whatever width you want */
     display:  -webkit-inline-box !important;
     display:  -moz-box !important;
     white-space: normal !important;
@@ -207,6 +205,7 @@ top: 8px;
     -webkit-box-orient: vertical;
     -moz-box-orient: vertical;
 }
-.fixtop{
-    top:-8px !important;
+
+.carousel-item-btns{
+    padding-top: 3px;
 }
